--- a/bind.conf
+++ b/bind.conf
@@ -58,6 +58,21 @@ bind = $mainMod SHIFT, l, hy3:movewindow, r
 bind = $mainMod SHIFT, k, hy3:movewindow, u
 bind = $mainMod SHIFT, j, hy3:movewindow, d
 
+
+workspace = w[1], monitor:DP-1
+workspace = w[2], monitor:DP-2
+workspace = w[3], monitor:DP-2
+workspace = w[4], monitor:DP-1
+workspace = w[5], monitor:DP-1
+
+workspace = w[6], monitor:DP-2
+workspace = w[7], monitor:DP-2
+workspace = w[8], monitor:DP-1
+workspace = w[9], monitor:DP-1
+workspace = w[10], monitor:DP-2
+
+
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -140,5 +155,11 @@ bind = $mainMod, PRINT, exec, hyprshot -m window
 bind = , PRINT, exec, hyprshot -m output
 # bind = $shiftMod, PRINT, exec, hyprshot -m region
 
-bind = $shiftMod, PRINT, exec, grim -g "$(slurp)" ~/screenshots/screenshot_$(date +'%Y-%m-%d_%H-%M-%S').png
+# bind = $shiftMod, PRINT, exec, grim -g "$(slurp)" ~/screenshots/screenshot_$(date +'%Y-%m-%d_%H-%M-%S').png
+bind = $shiftMod, PRINT, exec, grim -g "$(slurp)" ~/Screenshots/screenshot_hypr_$(date +'%Y-%m-%d_%H-%M-%S').png && wl-copy < ~/Screenshots/screenshot_hypr_$(date +'%Y-%m-%d_%H-%M-%S').png
 
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
+
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioStop, exec, playerctl stop
