--- a/hyprland.conf
+++ b/hyprland.conf
@@ -12,11 +12,13 @@
 ################
 ### MONITORS ###
 ################
+#
 exec-once = hyprpm reload -n
-# See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=,preferred,auto,auto
-# monitor=,preferred,0x0,1,vrr, 1, bitdepth, 10
-monitor=,1920x1080@144,0x0,1,bitdepth,10
+
+monitor=DP-2,2560x1440@180,0x0,1
+monitor=DP-1,1920x1080@144,2560x0,1
+
+# monitor=HDMI-1,1280x720@60,4480x0,1
 
 ###################
 ### MY PROGRAMS ###
@@ -26,7 +28,8 @@ monitor=,1920x1080@144,0x0,1,bitdepth,10
 
 # Set programs that you use
 # $terminal = alacritty
-$terminal = kitty 
+$terminal = wezterm 
+# $terminal = kitty 
 $fileManager = nemo 
 $menu = wofi --show drun
 
@@ -41,6 +44,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = "sudo wg-quick up xeovo-nl"
 
 
 #############################
@@ -55,10 +59,12 @@ env = HYPRCURSOR_SIZE,24
 # NVIDIA
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-rdm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-cursor { 
-	no_hardware_cursors = true
+env = GBM_BACKEND,nvidia-drm
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = NVD_BACKEND,direct
+cursor { 	
+    no_hardware_cursors = true
+    inactive_timeout = 2
 }
 
 
@@ -71,8 +77,8 @@ cursor {
 # https://wiki.hyprland.org/Configuring/Variables/#general
 # general { 
 general { 
-    gaps_in = 5
-    gaps_out = 3, 15, 15, 15
+    gaps_in = 4
+    gaps_out =7,7,7,7 
     # gaps_out = 20
 
     border_size = 2
@@ -85,9 +91,9 @@ general {
     col.active_border = rgba(a89984ee) rgba(fbf1c7ee) 45deg
     col.inactive_border = rgba(3c3836aa)
 
+
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true 
-
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
@@ -97,13 +103,13 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    # rounding = 10
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
+    drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
@@ -111,8 +117,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 6
+        passes = 2
         
         vibrancy = 0.1696
     }
@@ -136,8 +142,8 @@ animations {
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    pseudotile = yes # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = yes # You probably want this
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -223,6 +229,12 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # plugin = hy3
 
 plugin {
+    borders-plus-plus {
+        add_borders = 0 # 0 - 2
+        col.border_1 = rgb(ffffff) # example col for border 1
+        col.border_2 = rgb(2222ff) # example col for border 2
+    }
+
     hy3 {
         tabs {
           # # height of the tab bar
@@ -275,17 +287,28 @@ plugin {
 
 # Wallpapers
 #
-exec-once=swaybg -i ~/.config/hypr/Anime1.png -m fill
+# exec-once=swaybg -i ~/.config/hypr/Anime1.png -m fill
 exec-once=waybar
+# exec-once=ags
+# exec-once=hyprpaper &
+#
+exec-once = hyprpaper
+# -c ~/.config/hypr/hyprpaper.conf
+
+exec-once=systemctl --user start hyprpolkitagent
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+
+
+# exec=swayidle -w timeout 1500 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+
 
 windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
 windowrulev2 = noanim, class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrulev2 = noblur, class:^(xwaylandvideobridge)$
-
 
 
 ####################
