--- a/bind.conf
+++ b/bind.conf
@@ -59,17 +59,34 @@ bind = $mainMod SHIFT, k, hy3:movewindow, u
 bind = $mainMod SHIFT, j, hy3:movewindow, d
 
 
-workspace = w[1], monitor:DP-1
-workspace = w[2], monitor:DP-2
-workspace = w[3], monitor:DP-2
-workspace = w[4], monitor:DP-1
-workspace = w[5], monitor:DP-1
+# workspace = w[1], monitor:DP-1
+# workspace = w[2], monitor:DP-2
+# workspace = w[3], monitor:DP-2
+# workspace = w[4], monitor:DP-1
+# workspace = w[5], monitor:DP-1
+#
+# workspace = w[6], monitor:DP-2
+# workspace = w[7], monitor:DP-2
+# workspace = w[8], monitor:DP-1
+# workspace = w[9], monitor:DP-1
+# workspace = w[10], monitor:DP-2
 
-workspace = w[6], monitor:DP-2
-workspace = w[7], monitor:DP-2
-workspace = w[8], monitor:DP-1
-workspace = w[9], monitor:DP-1
-workspace = w[10], monitor:DP-2
+workspace = 1, monitor:DP-1, default:true, on-created-empty:firefox
+workspace = 2, monitor:DP-2, default:true
+workspace = 3, monitor:DP-2, default:true
+workspace = 4, monitor:DP-1, default:true
+workspace = 5, monitor:DP-1, default:true, on-created-empty:telegram-desktop
+
+workspace = 6, monitor:DP-2, default:true
+workspace = 7, monitor:DP-2, default:true
+workspace = 8, monitor:DP-1, default:true
+workspace = 9, monitor:DP-1, default:true
+workspace = 10, monitor:DP-2, default:true
+
+
+
+workspace = special:magic, on-created-empty:wezterm
+workspace = special:ds, on-created-empty:vesktop
 
 
 
@@ -98,8 +115,12 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, SPACE, togglespecialworkspace, magic
+bind = $mainMod SHIFT, SPACE, movetoworkspace, special:magic
+
+bind = $mainMod, S, togglespecialworkspace, ds 
+bind = $mainMod SHIFT, S, movetoworkspace, special:ds
+
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
