--- a/hyprland.conf
+++ b/hyprland.conf
@@ -13,7 +13,6 @@
 ### MONITORS ###
 ################
 #
-exec-once = hyprpm reload -n
 
 monitor=DP-2,2560x1440@180,0x0,1
 monitor=DP-1,1920x1080@144,2560x0,1
@@ -30,21 +29,38 @@ monitor=DP-1,1920x1080@144,2560x0,1
 # $terminal = alacritty
 $terminal = wezterm 
 # $terminal = kitty 
+
 $fileManager = nemo 
 $menu = wofi --show drun
 
+windowrule=workspace special:ds, vesktop
+windowrule=workspace 5, class:org.telegram.desktop
+windowrule=workspace 1, class:firefox
+# exec-once=Vesktop
 
 #################
 ### AUTOSTART ###
 #################
 
+# HYPRLAND PLUGINS 
+exec-once = hyprpm reload -n
+
+# SWAY BACKGROUND 
+# exec-once=swaybg -i ~/.config/hypr/Anime1.png -m fill
+exec-once = bash ~/.config/hypr/set_wallpaper.sh
+
+# STATUS BAR (BOTTOM) 
+exec-once=waybar
+
+exec-once=systemctl --user start hyprpolkitagent
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# exec-once=swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+
+exec-once = hypridle
+
+
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-exec-once = "sudo wg-quick up xeovo-nl"
 
 
 #############################
@@ -97,9 +113,13 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
+    
+
     # layout = dwindle
     layout = hy3 
+
 }
+
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
@@ -109,10 +129,10 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = false
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    # drop_shadow = false
+    # shadow_range = 4
+    # shadow_render_power = 3
+    # col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -178,6 +198,9 @@ input {
     touchpad {
         natural_scroll = false
     }
+
+    repeat_delay = 250
+    repeat_rate = 50
 }
 
 # RU
@@ -287,18 +310,7 @@ plugin {
 
 # Wallpapers
 #
-# exec-once=swaybg -i ~/.config/hypr/Anime1.png -m fill
-exec-once=waybar
-# exec-once=ags
-# exec-once=hyprpaper &
-#
-exec-once = hyprpaper
-# -c ~/.config/hypr/hyprpaper.conf
 
-exec-once=systemctl --user start hyprpolkitagent
-
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 
 
 # exec=swayidle -w timeout 1500 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
