Fixed firefox keys
Updated wallpapers
Added special workspace for spotify

--- a/bind.conf
+++ b/bind.conf
@@ -74,7 +74,7 @@ bind = $mainMod SHIFT, j, hy3:movewindow, d
 workspace = 1, monitor:DP-1, default:true, on-created-empty:firefox
 workspace = 2, monitor:DP-2, default:true
 workspace = 3, monitor:DP-2, default:true
-workspace = 4, monitor:DP-1, default:true
+workspace = 4, monitor:DP-2, default:true
 workspace = 5, monitor:DP-1, default:true, on-created-empty:telegram-desktop
 
 workspace = 6, monitor:DP-2, default:true
@@ -87,6 +87,7 @@ workspace = 10, monitor:DP-2, default:true
 
 workspace = special:magic, on-created-empty:wezterm
 workspace = special:ds, on-created-empty:vesktop
+workspace = special:spot, on-created-empty:spotify
 
 
 
@@ -120,6 +121,10 @@ bind = $mainMod SHIFT, SPACE, movetoworkspace, special:magic
 
 bind = $mainMod, S, togglespecialworkspace, ds 
 bind = $mainMod SHIFT, S, movetoworkspace, special:ds
+
+bind = $mainMod, X, togglespecialworkspace, spot
+bind = $mainMod SHIFT, X, movetoworkspace, special:spot
+
 
 
 # Scroll through existing workspaces with mainMod + scroll
@@ -159,18 +164,18 @@ bind = Alt_L, 0, changegroupactive, 10
 # Key bindings above overlaps firefox internal bindings,
 # thats why is needed to define overlaped here
 
-bind = Alt_L, 1, pass, ^(firefox)$
-bind = Alt_L, 2, pass, ^(firefox)$
-bind = Alt_L, 3, pass, ^(firefox)$
-bind = Alt_L, 4, pass, ^(firefox)$
-bind = Alt_L, 5, pass, ^(firefox)$
-bind = Alt_L, 6, pass, ^(firefox)$
-bind = Alt_L, 7, pass, ^(firefox)$
-bind = Alt_L, 8, pass, ^(firefox)$
-bind = Alt_L, 9, pass, ^(firefox)$
+bind = Alt_L, 1, pass, class:^(firefox)$
+bind = Alt_L, 2, pass, class:^(firefox)$
+bind = Alt_L, 3, pass, class:^(firefox)$
+bind = Alt_L, 4, pass, class:^(firefox)$
+bind = Alt_L, 5, pass, class:^(firefox)$
+bind = Alt_L, 6, pass, class:^(firefox)$
+bind = Alt_L, 7, pass, class:^(firefox)$
+bind = Alt_L, 8, pass, class:^(firefox)$
+bind = Alt_L, 9, pass, class:^(firefox)$
 
-bind = Control_L, Tab, pass, ^(firefox)$
-bind = Control_L&Shift_L, Tab, pass, ^(firefox)$
+bind = Control_L, Tab, pass, class:^(firefox)$
+bind = Control_L&Shift_L, Tab, pass, class:^(firefox)$
 
 bind = $mainMod, PRINT, exec, hyprshot -m window
 bind = , PRINT, exec, hyprshot -m output
