--- a/hyprland.conf
+++ b/hyprland.conf
@@ -50,7 +50,7 @@ exec-once = hyprpm reload -n
 exec-once = bash ~/.config/hypr/set_wallpaper.sh
 
 # STATUS BAR (BOTTOM) 
-exec-once=waybar
+exec-once=sleep 2 && waybar
 
 exec-once=systemctl --user start hyprpolkitagent
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -139,10 +139,10 @@ decoration {
         enabled = true
         size = 6
         passes = 2
-        
         vibrancy = 0.1696
     }
 }
+
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
@@ -322,6 +322,8 @@ windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 
+windowrulev2= opacity 0.8r,class:^(firefox)
+windowrulev2= opacity 0.85r,class:^(nemo)
 
 ####################
 ### KEYBINDINGSS ###
