Added new animetions

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -14,8 +14,9 @@
 ################
 #
 
-monitor=DP-2,2560x1440@180,0x0,1
-monitor=DP-1,1920x1080@144,2560x0,1
+monitor=HDMI-A-1,2560x1440@60,0x0,1
+# monitor=HDMI-A-1,1920x1080@60,0x0,1
+monitor=eDP-1,1920x1080@60,0x1440,1
 
 # monitor=HDMI-1,1280x720@60,4480x0,1
 
@@ -36,6 +37,9 @@ $menu = wofi --show drun
 windowrule=workspace special:ds, vesktop
 windowrule=workspace 5, class:org.telegram.desktop
 windowrule=workspace 1, class:firefox
+
+# windowrulev2 = noborder, focus:0
+windowrulev2 = noshadow, focus:0
 # exec-once=Vesktop
 
 #################
@@ -57,6 +61,8 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 # exec-once=swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 
 exec-once = hypridle
+
+# exec-once = ~/Scripts/dynamic_borders.sh
 
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
@@ -93,27 +99,26 @@ cursor {
 # https://wiki.hyprland.org/Configuring/Variables/#general
 # general { 
 general { 
-    gaps_in = 4
-    gaps_out =7,7,7,7 
+    gaps_in = 3,3,3,3 
+    gaps_out =9,9,5,9 
     # gaps_out = 20
 
-    border_size = 2
+    border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     # col.inactive_border = rgba(595959aa)
     
     # col.active_border = rgba(fbf1c7ee) rgba(fe8019ee)  45deg
-    col.active_border = rgba(a89984ee) rgba(fbf1c7ee) 45deg
-    col.inactive_border = rgba(3c3836aa)
+    # col.active_border = rgba(a89984ee) rgba(fbf1c7ee) 45deg
+    col.active_border = rgba(3c3836FF)
+    col.inactive_border = rgba(3c383699)
 
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
-    
 
     # layout = dwindle
     layout = hy3 
@@ -123,11 +128,11 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    # rounding = 10
+    rounding = 12
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.7
 
     # drop_shadow = false
     # shadow_range = 4
@@ -137,8 +142,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 6
-        passes = 2
+        size = 5
+        passes = 4
         vibrancy = 0.1696
     }
 }
@@ -150,14 +155,25 @@ animations {
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    # bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = myBezier, 0.87, 0, 0.13, 1
+    bezier = myBezier1, 0.85, 0, 0.15, 1
+    bezier = myBezier2, 0.22, -0.9, 0.32, 1
+    bezier = myBezier3,  0.81, 1, 0.25, 0.94 
+    bezier = myBezier4,  0.3, 0.5, 0.3, 1
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
+
+    # animation = windows, 1, 5, default 
+    animation = windows, 1, 3, myBezier, slide bottom
+    # animation = windowsOut, 1, 5, myBezier2, slidefade 30%
+    animation = windowsOut, 1, 5, myBezier1, slide top
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = fade, 1, 3, default
+    animation = fadeOut, 1, 10, myBezier
+    animation = workspaces, 1, 4.5, default
+    # animation = workspaces, 1, 2, myBezier4
+    # , slidefade 100%
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -192,11 +208,11 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.8 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.0 # -1.0 - 1.0, 0 means no modification.
     accel_profile = adaptive
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true 
     }
 
     repeat_delay = 250
@@ -259,6 +275,7 @@ plugin {
     }
 
     hy3 {
+        # no_gaps_when_only = 1
         tabs {
           # # height of the tab bar
           height = 15 # default: 15
@@ -322,8 +339,13 @@ windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 
-windowrulev2= opacity 0.8r,class:^(firefox)
+windowrulev2= opacity 0.9r,class:^(firefox)
+windowrulev2= opacity 0.8r,class:^(dunst)
 windowrulev2= opacity 0.85r,class:^(nemo)
+windowrulev2= float,title:^(snjwidget)
+
+# layerrule = blur,waybar
+# layerrule = blur,wofi 
 
 ####################
 ### KEYBINDINGSS ###
