--- a/bind.conf
+++ b/bind.conf
@@ -19,6 +19,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # bind = $mainMod, J, togglesplit, # dwindle
 
 bind = $mainMod, Return, exec, $terminal
+# bind = $mainMod, Return, exec, wezterm start --always-new-process
+# bind = $mainMod, Return, exec, wezterm start --always-new-process
 bind = $mainMode SHIFT, Q, hy3:killactive
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
@@ -164,15 +166,15 @@ bind = Alt_L, 0, changegroupactive, 10
 # Key bindings above overlaps firefox internal bindings,
 # thats why is needed to define overlaped here
 
-bind = Alt_L, 1, pass, class:^(firefox)$
-bind = Alt_L, 2, pass, class:^(firefox)$
-bind = Alt_L, 3, pass, class:^(firefox)$
-bind = Alt_L, 4, pass, class:^(firefox)$
-bind = Alt_L, 5, pass, class:^(firefox)$
-bind = Alt_L, 6, pass, class:^(firefox)$
-bind = Alt_L, 7, pass, class:^(firefox)$
-bind = Alt_L, 8, pass, class:^(firefox)$
-bind = Alt_L, 9, pass, class:^(firefox)$
+# bind = Alt_L, 1, pass, class:^(firefox)$
+# bind = Alt_L, 2, pass, class:^(firefox)$
+# bind = Alt_L, 3, pass, class:^(firefox)$
+# bind = Alt_L, 4, pass, class:^(firefox)$
+# bind = Alt_L, 5, pass, class:^(firefox)$
+# bind = Alt_L, 6, pass, class:^(firefox)$
+# bind = Alt_L, 7, pass, class:^(firefox)$
+# bind = Alt_L, 8, pass, class:^(firefox)$
+# bind = Alt_L, 9, pass, class:^(firefox)$
 
 bind = Control_L, Tab, pass, class:^(firefox)$
 bind = Control_L&Shift_L, Tab, pass, class:^(firefox)$
