--- a/hyprland.conf
+++ b/hyprland.conf
@@ -14,9 +14,13 @@
 ################
 #
 
-monitor=HDMI-A-1,2560x1440@60,0x0,1
-# monitor=HDMI-A-1,1920x1080@60,0x0,1
-monitor=eDP-1,1920x1080@60,0x1440,1
+# monitor=HDMI-A-1,2560x1440@60,0x0,1
+# # monitor=HDMI-A-1,1920x1080@60,0x0,1
+# monitor=eDP-1,1920x1080@60,0x1440,1
+
+monitor=DP-2,2560x1440@180,0x0,1
+monitor=DP-1,1920x1080@144,2560x0,1
+
 
 # monitor=HDMI-1,1280x720@60,4480x0,1
 
@@ -54,7 +58,10 @@ exec-once = hyprpm reload -n
 exec-once = bash ~/.config/hypr/set_wallpaper.sh
 
 # STATUS BAR (BOTTOM) 
-exec-once=sleep 2 && waybar
+# exec-once=sleep 2 && waybar
+exec-once=waybar --config ~/.config/waybar/config_2k.jsonc --style ~/.config/waybar/style.css
+exec-once=waybar --config ~/.config/waybar/config_fullhd.jsonc --style ~/.config/waybar/style.css
+
 
 exec-once=systemctl --user start hyprpolkitagent
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -339,7 +346,7 @@ windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 
-windowrulev2= opacity 0.9r,class:^(firefox)
+windowrulev2= opacity override 0.9 override 0.9 override, class:^(firefox)
 windowrulev2= opacity 0.8r,class:^(dunst)
 windowrulev2= opacity 0.85r,class:^(nemo)
 windowrulev2= float,title:^(snjwidget)
