--- a/bind.conf
+++ b/bind.conf
@@ -18,18 +18,19 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
-bind = $mainMod, Return, exec, $terminal
+# bind = $mainMod, Return, exec, $terminal
 # bind = $mainMod, Return, exec, wezterm start --always-new-process
 # bind = $mainMod, Return, exec, wezterm start --always-new-process
+bind = $mainMod, Return, exec, kitty
 bind = $mainMode SHIFT, Q, hy3:killactive
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod SHIFT, Space, togglefloating,
+# bind = $mainMod SHIFT, Space, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, 
 
 bind = $mainMod, F, fullscreen,
-bind = $mainMod, V, togglesplit, # dwindle
+# bind = $mainMod, V, togglesplit, # dwindle
 
 # -------------------------------------- #
 # Move focus with mainMod + arrow keys   # 
@@ -86,11 +87,11 @@ workspace = 9, monitor:DP-1, default:true
 workspace = 10, monitor:DP-2, default:true
 
 
-
 workspace = special:magic, on-created-empty:wezterm
-workspace = special:ds, on-created-empty:vesktop
-workspace = special:spot, on-created-empty:spotify
-
+workspace = special:ds, on-created-empty:vesktop, move-to:ds
+workspace = special:spot, on-created-empty:spotify-launcher
+workspace = special:obs, on-created-empty:obsidian
+workspace = special:vpn, on-created-empty:/home/snj/.local/share/nekoray/nekoray-3.26-2023-12-09-linux-x64.AppImage
 
 
 # Switch workspaces with mainMod + [0-9]
@@ -118,14 +119,17 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, SPACE, togglespecialworkspace, magic
-bind = $mainMod SHIFT, SPACE, movetoworkspace, special:magic
-
 bind = $mainMod, S, togglespecialworkspace, ds 
 bind = $mainMod SHIFT, S, movetoworkspace, special:ds
 
 bind = $mainMod, X, togglespecialworkspace, spot
 bind = $mainMod SHIFT, X, movetoworkspace, special:spot
+
+bind = $mainMod, Z, togglespecialworkspace, obs
+bind = $mainMod SHIFT, Z, movetoworkspace, special:obs
+
+bind = $mainMod, V, togglespecialworkspace, vpn
+bind = $mainMod SHIFT, V, movetoworkspace, special:vpn
 
 
 
@@ -189,5 +193,21 @@ bind = $shiftMod, PRINT, exec, grim -g "$(slurp)" ~/Screenshots/screenshot_hypr_
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
+bind = $mainMod, mouse:276, exec, playerctl next
+bind = $mainMod, mouse:275, exec, playerctl previous
+bind = $mainMod, mouse:274, togglefloating,
+
+bindm = , mouse:275, exec xdotool click 2
+
+
 bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioStop, exec, playerctl stop
+
+bind = $mainMod, P, exec, lua ~/Scripts/start_waybar.lua
+
+
+
+
+
+# bindm=mouse:275,exec,hyprctl dispatch keybind SUPER_L+Left
+# bindm=mouse:276,exec,hyprctl dispatch keybind SUPER_L+Right
