--- a/hyprland.conf
+++ b/hyprland.conf
@@ -21,8 +21,10 @@
 monitor=DP-2,2560x1440@180,0x0,1
 monitor=DP-1,1920x1080@144,2560x0,1
 
-
 # monitor=HDMI-1,1280x720@60,4480x0,1
+# monitor=HDMI-A-1,1920x1080@60,4480x0,1
+# monitor=HDMI-A-2,1920x1080@60,4480x0,1
+# monitor=HDMI-A-1,1920x1080@60,0x0,1
 
 ###################
 ### MY PROGRAMS ###
@@ -32,17 +34,17 @@ monitor=DP-1,1920x1080@144,2560x0,1
 
 # Set programs that you use
 # $terminal = alacritty
-$terminal = wezterm 
-# $terminal = kitty 
+# $terminal = wezterm 
+$terminal = kitty 
 
 $fileManager = nemo 
 $menu = wofi --show drun
 
-windowrule=workspace special:ds, vesktop
+# windowrule=workspace special:ds, vesktop
 windowrule=workspace 5, class:org.telegram.desktop
 windowrule=workspace 1, class:firefox
 
-# windowrulev2 = noborder, focus:0
+windowrulev2 = noborder, focus:0
 windowrulev2 = noshadow, focus:0
 # exec-once=Vesktop
 
@@ -59,15 +61,19 @@ exec-once = bash ~/.config/hypr/set_wallpaper.sh
 
 # STATUS BAR (BOTTOM) 
 # exec-once=sleep 2 && waybar
-exec-once=waybar --config ~/.config/waybar/config_2k.jsonc --style ~/.config/waybar/style.css
-exec-once=waybar --config ~/.config/waybar/config_fullhd.jsonc --style ~/.config/waybar/style.css
+# exec-once=waybar --config ~/.config/waybar/config_2k.jsonc --style ~/.config/waybar/style.css
+# exec-once=waybar --config ~/.config/waybar/config_fullhd.jsonc --style ~/.config/waybar/style.css
+exec-once=lua ~/Scripts/start_waybar.lua
 
 
 exec-once=systemctl --user start hyprpolkitagent
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# exec-once=swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+# exec-once=vesktop, move-to:sepcial:ds
 
-exec-once = hypridle
+
+# exec-once=swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+# exec = hyprctl dispatch dpms off
+# exec-once = hypridle
 
 # exec-once = ~/Scripts/dynamic_borders.sh
 
@@ -149,9 +155,15 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 5
-        passes = 4
+        size = 7
+        passes = 3
+        ignore_opacity = true
         vibrancy = 0.1696
+        xray = true
+        # noise = 0.01
+        # contrast = 0.9
+        # vibrancy_darkness = 0.3
+
     }
 }
 
@@ -346,10 +358,19 @@ windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 
+# windowrulev2 = noblur ,class:^(kitty)
+
 windowrulev2= opacity override 0.9 override 0.9 override, class:^(firefox)
 windowrulev2= opacity 0.8r,class:^(dunst)
 windowrulev2= opacity 0.85r,class:^(nemo)
+windowrulev2= opacity 0.85r,class:^(vesktop)
+windowrulev2= opacity 0.85r,class:^(obsidian)
+windowrulev2= float,opacity 0.85r,class:^(waypaper)
 windowrulev2= float,title:^(snjwidget)
+
+windowrulev2 = float, class:^(spotify)
+windowrulev2 = size 1800 1000, class:^(spotify)
+windowrulev2 = center, class:^(spotify)
 
 # layerrule = blur,waybar
 # layerrule = blur,wofi 
@@ -358,5 +379,3 @@ windowrulev2= float,title:^(snjwidget)
 ### KEYBINDINGSS ###
 ####################
 source = /home/snj/.config/hypr/bind.conf
-
-
