Changed screenshot maker
Removed wallpapers

--- a/bind.conf
+++ b/bind.conf
@@ -25,6 +25,8 @@ bind = $mainMod, Return, exec, kitty
 bind = $mainMode SHIFT, Q, hy3:killactive
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
+
+
 # bind = $mainMod SHIFT, Space, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, 
@@ -183,12 +185,14 @@ bind = Alt_L, 0, changegroupactive, 10
 bind = Control_L, Tab, pass, class:^(firefox)$
 bind = Control_L&Shift_L, Tab, pass, class:^(firefox)$
 
-bind = $mainMod, PRINT, exec, hyprshot -m window
-bind = , PRINT, exec, hyprshot -m output
+# bind = $mainMod, PRINT, exec, hyprshot -m window
+# bind = , PRINT, exec, hyprshot -m output
 # bind = $shiftMod, PRINT, exec, hyprshot -m region
 
-# bind = $shiftMod, PRINT, exec, grim -g "$(slurp)" ~/screenshots/screenshot_$(date +'%Y-%m-%d_%H-%M-%S').png
-bind = $shiftMod, PRINT, exec, grim -g "$(slurp)" ~/Screenshots/screenshot_hypr_$(date +'%Y-%m-%d_%H-%M-%S').png && wl-copy < ~/Screenshots/screenshot_hypr_$(date +'%Y-%m-%d_%H-%M-%S').png
+
+
+
+bind = $mainMod, PRINT, exec, hyprshot -m region -o ~/Screenshots
 
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
@@ -197,7 +201,7 @@ bind = $mainMod, mouse:276, exec, playerctl next
 bind = $mainMod, mouse:275, exec, playerctl previous
 bind = $mainMod, mouse:274, togglefloating,
 
-bindm = , mouse:275, exec xdotool click 2
+bindm = $mainMod, mouse:275, exec xdotool click 2
 
 
 bind = , XF86AudioPlay, exec, playerctl play-pause
