--- a/hyprland.conf
+++ b/hyprland.conf
@@ -362,7 +362,11 @@ windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 
 windowrulev2= opacity override 0.9 override 0.9 override, class:^(firefox)
 windowrulev2= opacity 0.8r,class:^(dunst)
-windowrulev2= opacity 0.85r,class:^(nemo)
+# windowrulev2= opacity 0.85r,initialTitle:^(nemo)
+
+windowrulev2=opacity 0.85r,class:^(nemo)$
+windowrulev2=opacity 1.0,class:^(Nemo-menu)$
+
 windowrulev2= opacity 0.85r,class:^(vesktop)
 windowrulev2= opacity 0.85r,class:^(obsidian)
 windowrulev2= float,opacity 0.85r,class:^(waypaper)
