--- a/hyprland.conf
+++ b/hyprland.conf
@@ -38,7 +38,8 @@ monitor=DP-1,1920x1080@144,2560x0,1
 $terminal = kitty 
 
 $fileManager = nemo 
-$menu = wofi --show drun
+# $menu = wofi --show drun
+$menu = fuzzel
 
 # windowrule=workspace special:ds, vesktop
 windowrule=workspace 5, class:org.telegram.desktop
@@ -57,17 +58,21 @@ exec-once = hyprpm reload -n
 
 # SWAY BACKGROUND 
 # exec-once=swaybg -i ~/.config/hypr/Anime1.png -m fill
-exec-once = bash ~/.config/hypr/set_wallpaper.sh
+# exec-once = bash ~/.config/hypr/set_wallpaper.sh
 
 # STATUS BAR (BOTTOM) 
 # exec-once=sleep 2 && waybar
 # exec-once=waybar --config ~/.config/waybar/config_2k.jsonc --style ~/.config/waybar/style.css
 # exec-once=waybar --config ~/.config/waybar/config_fullhd.jsonc --style ~/.config/waybar/style.css
 exec-once=lua ~/Scripts/start_waybar.lua
+exec-once=~/Scripts/start_wallpaper.sh
+
 
 
 exec-once=systemctl --user start hyprpolkitagent
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+
 # exec-once=vesktop, move-to:sepcial:ds
 
 
@@ -210,6 +215,7 @@ master {
 misc { 
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    enable_anr_dialog = false
 }
 
 
@@ -234,8 +240,8 @@ input {
         natural_scroll = true 
     }
 
-    repeat_delay = 250
-    repeat_rate = 50
+    repeat_delay = 195
+    repeat_rate = 75
 }
 
 # RU
@@ -293,6 +299,18 @@ plugin {
         col.border_2 = rgb(2222ff) # example col for border 2
     }
 
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+
+        # enable_gesture = true # laptop touchpad
+        # gesture_fingers = 3  # 3 or 4
+        # gesture_distance = 300 # how far is the "max"
+        # gesture_positive = true # positive = swipe down. Negative = swipe up.
+    }
+
     hy3 {
         # no_gaps_when_only = 1
         tabs {
@@ -342,11 +360,43 @@ plugin {
           # col.text.inactive = <color> # default: 0xff000000
         }
     }
+
+    hyprfocus {
+        enabled = yes
+
+        keyboard_focus_animation = shrink
+        mouse_focus_animation = flash
+
+        bezier = bezIn, 0.5,0.0,1.0,0.5
+        bezier = bezOut, 0.0,0.5,0.5,1.0
+
+        flash {
+            flash_opacity = 0.7
+
+            in_bezier = bezIn
+            in_speed = 0.5
+
+            out_bezier = bezOut
+            out_speed = 3
+        }
+
+        shrink {
+            shrink_percentage = 0.8
+
+            in_bezier = bezIn
+            in_speed = 0.5
+
+            out_bezier = bezOut
+            out_speed = 3
+        }
+    }
+    
 }
 
 # Wallpapers
 #
 
+bind = $mainMod SHIFT, TAB, hyprexpo:expo, toggle
 
 
 # exec=swayidle -w timeout 1500 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
@@ -375,6 +425,17 @@ windowrulev2= float,title:^(snjwidget)
 windowrulev2 = float, class:^(spotify)
 windowrulev2 = size 1800 1000, class:^(spotify)
 windowrulev2 = center, class:^(spotify)
+
+windowrulev2 = float,class:(Xdg-desktop-portal-gtk),title:(Open File)
+windowrulev2 = float,class:(Xdg-desktop-portal-gtk),title:(Save As)
+
+windowrulev2 = float,class:(org.pulseaudio.pavucontrol)
+windowrulev2 = size 60% 70%,class:(org.pulseaudio.pavucontrol)
+windowrulev2 = move 39% 28%,class:(org.pulseaudio.pavucontrol)
+
+windowrulev2 = bordercolor rgb(d79921) rgb(d79921),floating:1
+windowrulev2 = bordersize 1, floating:1
+windowrulev2 = dimaround, floating:1
 
 # layerrule = blur,waybar
 # layerrule = blur,wofi 
