--- a/bind.conf
+++ b/bind.conf
@@ -22,10 +22,10 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # bind = $mainMod, Return, exec, wezterm start --always-new-process
 # bind = $mainMod, Return, exec, wezterm start --always-new-process
 bind = $mainMod, Return, exec, kitty
-bind = $mainMode SHIFT, Q, hy3:killactive
+bind = $mainMod SHIFT, Q, hy3:killactive
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-
+# bind = SUPER, g, hyprexpo:expo, toggle
 
 # bind = $mainMod SHIFT, Space, togglefloating,
 bind = $mainMod, D, exec, $menu
@@ -80,7 +80,7 @@ workspace = 1, monitor:DP-1, default:true, on-created-empty:firefox
 workspace = 2, monitor:DP-2, default:true
 workspace = 3, monitor:DP-2, default:true
 workspace = 4, monitor:DP-2, default:true
-workspace = 5, monitor:DP-1, default:true, on-created-empty:telegram-desktop
+workspace = 5, monitor:DP-1, default:true, on-created-empty:Telegram
 
 workspace = 6, monitor:DP-2, default:true
 workspace = 7, monitor:DP-2, default:true
@@ -94,6 +94,8 @@ workspace = special:ds, on-created-empty:vesktop, move-to:ds
 workspace = special:spot, on-created-empty:spotify-launcher
 workspace = special:obs, on-created-empty:obsidian
 workspace = special:vpn, on-created-empty:/home/snj/.local/share/nekoray/nekoray-3.26-2023-12-09-linux-x64.AppImage
+
+workspace = special:translate, on-created-empty:kitty -e trans -I
 
 
 # Switch workspaces with mainMod + [0-9]
@@ -132,6 +134,10 @@ bind = $mainMod SHIFT, Z, movetoworkspace, special:obs
 
 bind = $mainMod, V, togglespecialworkspace, vpn
 bind = $mainMod SHIFT, V, movetoworkspace, special:vpn
+
+bind = $mainMod, T, togglespecialworkspace, translate
+bind = $mainMod SHIFT, T, movetoworkspace, special:translate
+
 
 
 
@@ -192,13 +198,14 @@ bind = Control_L&Shift_L, Tab, pass, class:^(firefox)$
 
 
 
-bind = $mainMod, PRINT, exec, hyprshot -m region -o ~/Screenshots
+bind = , PRINT, exec, hyprshot -m region -o ~/Data/Screenshots
+bind = Shift_L, PRINT, exec, hyprshot -m window -o ~/Data/Screenshots
 
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
-bind = $mainMod, mouse:276, exec, playerctl next
-bind = $mainMod, mouse:275, exec, playerctl previous
+bind = $mainMod&SHIFT, mouse:276, exec, playerctl next
+bind = $mainMod&SHIFT, mouse:275, exec, playerctl previous
 bind = $mainMod, mouse:274, togglefloating,
 
 bindm = $mainMod, mouse:275, exec xdotool click 2
@@ -209,9 +216,11 @@ bind = , XF86AudioStop, exec, playerctl stop
 
 bind = $mainMod, P, exec, lua ~/Scripts/start_waybar.lua
 
-
-
-
+bind = , F1+h, exec, sendevent keyboard KEY_LEFT
+# bind = , j, exec, sendevent keyboard KEY_DOWN
+# bind = , k, exec, sendevent keyboard KEY_UP
+# bind = , l, exec, sendevent keyboard KEY_RIGHT
+#
 
 # bindm=mouse:275,exec,hyprctl dispatch keybind SUPER_L+Left
 # bindm=mouse:276,exec,hyprctl dispatch keybind SUPER_L+Right
