Fixed pavucontrol dimaround

--- a/bind.conf
+++ b/bind.conf
@@ -215,6 +215,7 @@ bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioStop, exec, playerctl stop
 
 bind = $mainMod, P, exec, lua ~/Scripts/start_waybar.lua
+bind = $mainMod, K, exec, ~/Scripts/start_pavu.sh
 
 bind = , F1+h, exec, sendevent keyboard KEY_LEFT
 # bind = , j, exec, sendevent keyboard KEY_DOWN
