--- a/hyprland.conf
+++ b/hyprland.conf
@@ -433,9 +433,10 @@ windowrulev2 = float,class:(org.pulseaudio.pavucontrol)
 windowrulev2 = size 60% 70%,class:(org.pulseaudio.pavucontrol)
 windowrulev2 = move 39% 28%,class:(org.pulseaudio.pavucontrol)
 
+windowrulev2 = dimaround, class:(org.pulseaudio.pavucontrol)
+
 windowrulev2 = bordercolor rgb(d79921) rgb(d79921),floating:1
 windowrulev2 = bordersize 1, floating:1
-windowrulev2 = dimaround, floating:1
 
 # layerrule = blur,waybar
 # layerrule = blur,wofi 
