--- a/bind.conf
+++ b/bind.conf
@@ -2,58 +2,23 @@
 ### KEYBINDINGSS ###
 ####################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
+$mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
-# STD!
-# bind = $mainMod, Q, exec, $terminal
-# bind = $mainMod, C, killactive,
-# bind = $mainMod, M, exit,
-# bind = $mainMod, E, exec, $fileManager
-# bind = $mainMod, V, togglefloating,
-# bind = $mainMod, R, exec, $menu
-# bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
-
-# bind = $mainMod, Return, exec, $terminal
-# bind = $mainMod, Return, exec, wezterm start --always-new-process
-# bind = $mainMod, Return, exec, wezterm start --always-new-process
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod SHIFT, Q, hy3:killactive
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-# bind = SUPER, g, hyprexpo:expo, toggle
-
-# bind = $mainMod SHIFT, Space, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, 
-
 bind = $mainMod, F, fullscreen,
-# bind = $mainMod, V, togglesplit, # dwindle
 
 # -------------------------------------- #
 # Move focus with mainMod + arrow keys   # 
 # -------------------------------------- #
-# STD!
-# bind = $mainMod, left, movefocus, l
-# bind = $mainMod, right, movefocus, r
-# bind = $mainMod, up, movefocus, u
-# bind = $mainMod, down, movefocus, d
-
 bind = $mainMod, h, hy3:movefocus, l
 bind = $mainMod, l, hy3:movefocus, r
 bind = $mainMod, k, hy3:movefocus, u
 bind = $mainMod, j, hy3:movefocus, d
-
-#
-# bind = $mainMod, h, movefocus, l
-# bind = $mainMod, l, movefocus, r
-# bind = $mainMod, k, movefocus, u
-# bind = $mainMod, j, movefocus, d
-
 
 # -------------------------------------- #
 # Move focused                           # 
@@ -63,102 +28,16 @@ bind = $mainMod SHIFT, l, hy3:movewindow, r
 bind = $mainMod SHIFT, k, hy3:movewindow, u
 bind = $mainMod SHIFT, j, hy3:movewindow, d
 
-
-# workspace = w[1], monitor:DP-1
-# workspace = w[2], monitor:DP-2
-# workspace = w[3], monitor:DP-2
-# workspace = w[4], monitor:DP-1
-# workspace = w[5], monitor:DP-1
-#
-# workspace = w[6], monitor:DP-2
-# workspace = w[7], monitor:DP-2
-# workspace = w[8], monitor:DP-1
-# workspace = w[9], monitor:DP-1
-# workspace = w[10], monitor:DP-2
-
-workspace = 1, monitor:DP-1, default:true, on-created-empty:firefox
-workspace = 2, monitor:DP-2, default:true
-workspace = 3, monitor:DP-2, default:true
-workspace = 4, monitor:DP-2, default:true
-workspace = 5, monitor:DP-1, default:true, on-created-empty:Telegram
-
-workspace = 6, monitor:DP-2, default:true
-workspace = 7, monitor:DP-2, default:true
-workspace = 8, monitor:DP-1, default:true
-workspace = 9, monitor:DP-1, default:true
-workspace = 10, monitor:DP-2, default:true
-
-
-workspace = special:magic, on-created-empty:wezterm
-workspace = special:ds, on-created-empty:vesktop, move-to:ds
-workspace = special:spot, on-created-empty:spotify-launcher
-workspace = special:obs, on-created-empty:obsidian
-workspace = special:vpn, on-created-empty:/home/snj/.local/share/nekoray/nekoray-3.26-2023-12-09-linux-x64.AppImage
-
-workspace = special:translate, on-created-empty:kitty -e trans -I
-
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, ds 
-bind = $mainMod SHIFT, S, movetoworkspace, special:ds
-
-bind = $mainMod, X, togglespecialworkspace, spot
-bind = $mainMod SHIFT, X, movetoworkspace, special:spot
-
-bind = $mainMod, Z, togglespecialworkspace, obs
-bind = $mainMod SHIFT, Z, movetoworkspace, special:obs
-
-bind = $mainMod, V, togglespecialworkspace, vpn
-bind = $mainMod SHIFT, V, movetoworkspace, special:vpn
-
-bind = $mainMod, T, togglespecialworkspace, translate
-bind = $mainMod SHIFT, T, movetoworkspace, special:translate
-
-
-
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # GROUP
-# 
 bind = $mainMod, w, hy3:makegroup, tab
-
 bind = $mainMod, down, moveintogroup, d
 bind = $mainMod, up, moveintogroup, u
 bind = $mainMod, left, moveintogroup, l
 bind = $mainMod, right, moveintogroup, r
-
-bind = $mainMod&Shift_L, w, moveoutofgroup, active
 
 bind = Control_L, Tab, changegroupactive, f
 bind = Control_L&Shift_L, Tab, changegroupactive, b
@@ -175,39 +54,19 @@ bind = Alt_L, 9, changegroupactive, 9
 bind = Alt_L, 0, changegroupactive, 10
 
 
-# Key bindings above overlaps firefox internal bindings,
-# thats why is needed to define overlaped here
-
-# bind = Alt_L, 1, pass, class:^(firefox)$
-# bind = Alt_L, 2, pass, class:^(firefox)$
-# bind = Alt_L, 3, pass, class:^(firefox)$
-# bind = Alt_L, 4, pass, class:^(firefox)$
-# bind = Alt_L, 5, pass, class:^(firefox)$
-# bind = Alt_L, 6, pass, class:^(firefox)$
-# bind = Alt_L, 7, pass, class:^(firefox)$
-# bind = Alt_L, 8, pass, class:^(firefox)$
-# bind = Alt_L, 9, pass, class:^(firefox)$
-
+# OTHER
 bind = Control_L, Tab, pass, class:^(firefox)$
 bind = Control_L&Shift_L, Tab, pass, class:^(firefox)$
 
-# bind = $mainMod, PRINT, exec, hyprshot -m window
-# bind = , PRINT, exec, hyprshot -m output
-# bind = $shiftMod, PRINT, exec, hyprshot -m region
-
-
-
-
-bind = , PRINT, exec, hyprshot -m region -o ~/Data/Screenshots
-bind = Shift_L, PRINT, exec, hyprshot -m window -o ~/Data/Screenshots
+bind = , PRINT, exec, hyprshot -m region -o ~/Data/Media/Screenshots
+bind = Shift_L, PRINT, exec, hyprshot -m window -o ~/Data/Media/Screenshots
 
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
-bind = $mainMod&SHIFT, mouse:276, exec, playerctl next
-bind = $mainMod&SHIFT, mouse:275, exec, playerctl previous
+bind = $mainMod & SHIFT, mouse:276, exec, playerctl next
+bind = $mainMod & SHIFT, mouse:275, exec, playerctl previous
 bind = $mainMod, mouse:274, togglefloating,
-
 bindm = $mainMod, mouse:275, exec xdotool click 2
 
 
@@ -215,13 +74,9 @@ bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioStop, exec, playerctl stop
 
 bind = $mainMod, P, exec, lua ~/Scripts/start_waybar.lua
-bind = $mainMod, K, exec, ~/Scripts/start_pavu.sh
+bind = $mainMod, U, exec, ~/Scripts/start_pavu.sh
 
 bind = , F1+h, exec, sendevent keyboard KEY_LEFT
-# bind = , j, exec, sendevent keyboard KEY_DOWN
-# bind = , k, exec, sendevent keyboard KEY_UP
-# bind = , l, exec, sendevent keyboard KEY_RIGHT
-#
+bind = $mainMod SHIFT, TAB, hyprexpo:expo, toggle
 
-# bindm=mouse:275,exec,hyprctl dispatch keybind SUPER_L+Left
-# bindm=mouse:276,exec,hyprctl dispatch keybind SUPER_L+Right
+
