--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,101 +1,28 @@
-# This is an example Hyprland config file. Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
-
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-
-
-################
-### MONITORS ###
-################
-#
-
-# monitor=HDMI-A-1,2560x1440@60,0x0,1
-# # monitor=HDMI-A-1,1920x1080@60,0x0,1
-# monitor=eDP-1,1920x1080@60,0x1440,1
-
-monitor=DP-2,2560x1440@180,0x0,1
-monitor=DP-1,1920x1080@144,2560x0,1
-
-# monitor=HDMI-1,1280x720@60,4480x0,1
-# monitor=HDMI-A-1,1920x1080@60,4480x0,1
-# monitor=HDMI-A-2,1920x1080@60,4480x0,1
-# monitor=HDMI-A-1,1920x1080@60,0x0,1
-
-###################
-### MY PROGRAMS ###
-###################
-
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-# Set programs that you use
-# $terminal = alacritty
-# $terminal = wezterm 
 $terminal = kitty 
-
 $fileManager = nemo 
-# $menu = wofi --show drun
 $menu = fuzzel
-
-# windowrule=workspace special:ds, vesktop
-windowrule=workspace 5, class:org.telegram.desktop
-windowrule=workspace 1, class:firefox
 
 windowrulev2 = noborder, focus:0
 windowrulev2 = noshadow, focus:0
-# exec-once=Vesktop
 
 #################
 ### AUTOSTART ###
 #################
-
-# HYPRLAND PLUGINS 
 exec-once = hyprpm reload -n
-
-# SWAY BACKGROUND 
-# exec-once=swaybg -i ~/.config/hypr/Anime1.png -m fill
-# exec-once = bash ~/.config/hypr/set_wallpaper.sh
-
-# STATUS BAR (BOTTOM) 
-# exec-once=sleep 2 && waybar
-# exec-once=waybar --config ~/.config/waybar/config_2k.jsonc --style ~/.config/waybar/style.css
-# exec-once=waybar --config ~/.config/waybar/config_fullhd.jsonc --style ~/.config/waybar/style.css
 exec-once=lua ~/Scripts/start_waybar.lua
 exec-once=~/Scripts/start_wallpaper.sh
-
-
-
 exec-once=systemctl --user start hyprpolkitagent
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-
-# exec-once=vesktop, move-to:sepcial:ds
-
-
-# exec-once=swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
-# exec = hyprctl dispatch dpms off
-# exec-once = hypridle
-
-# exec-once = ~/Scripts/dynamic_borders.sh
-
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
-
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
 # NVIDIA
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
@@ -107,103 +34,15 @@ cursor {
     inactive_timeout = 2
 }
 
-
 #####################
 ### LOOK AND FEEL ###
 #####################
 
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
-# general { 
-general { 
-    gaps_in = 3,3,3,3 
-    gaps_out =9,9,5,9 
-    # gaps_out = 20
-
-    border_size = 0
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    # col.inactive_border = rgba(595959aa)
-    
-    # col.active_border = rgba(fbf1c7ee) rgba(fe8019ee)  45deg
-    # col.active_border = rgba(a89984ee) rgba(fbf1c7ee) 45deg
-    col.active_border = rgba(3c3836FF)
-    col.inactive_border = rgba(3c383699)
-
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = true 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
-    # layout = dwindle
-    layout = hy3 
-
-}
-
-
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
-decoration {
-    rounding = 12
-
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 0.7
-
-    # drop_shadow = false
-    # shadow_range = 4
-    # shadow_render_power = 3
-    # col.shadow = rgba(1a1a1aee)
-
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 7
-        passes = 3
-        ignore_opacity = true
-        vibrancy = 0.1696
-        xray = true
-        # noise = 0.01
-        # contrast = 0.9
-        # vibrancy_darkness = 0.3
-
-    }
-}
-
-
-# https://wiki.hyprland.org/Configuring/Variables/#animations
-animations {
-    enabled = true
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    # bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    bezier = myBezier, 0.87, 0, 0.13, 1
-    bezier = myBezier1, 0.85, 0, 0.15, 1
-    bezier = myBezier2, 0.22, -0.9, 0.32, 1
-    bezier = myBezier3,  0.81, 1, 0.25, 0.94 
-    bezier = myBezier4,  0.3, 0.5, 0.3, 1
-
-
-    # animation = windows, 1, 5, default 
-    animation = windows, 1, 3, myBezier, slide bottom
-    # animation = windowsOut, 1, 5, myBezier2, slidefade 30%
-    animation = windowsOut, 1, 5, myBezier1, slide top
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 3, default
-    animation = fadeOut, 1, 10, myBezier
-    animation = workspaces, 1, 4.5, default
-    # animation = workspaces, 1, 2, myBezier4
-    # , slidefade 100%
-}
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = yes # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # You probably want this
+    pseudotile = yes
+    preserve_split = yes
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -244,11 +83,6 @@ input {
     repeat_rate = 75
 }
 
-# RU
-# exec = setxkbmap us
-# exec-once = setxkbmap -layout "us,ru" -option "grp:alt_shift_toggle"
-
-
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
@@ -272,176 +106,8 @@ group {
     }
 }
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-
-
-# plugin = /usr/lib/libhy3.so
-
-# plugin = hy3
-
-plugin {
-    borders-plus-plus {
-        add_borders = 0 # 0 - 2
-        col.border_1 = rgb(ffffff) # example col for border 1
-        col.border_2 = rgb(2222ff) # example col for border 2
-    }
-
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(111111)
-        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
-
-        # enable_gesture = true # laptop touchpad
-        # gesture_fingers = 3  # 3 or 4
-        # gesture_distance = 300 # how far is the "max"
-        # gesture_positive = true # positive = swipe down. Negative = swipe up.
-    }
-
-    hy3 {
-        # no_gaps_when_only = 1
-        tabs {
-          # # height of the tab bar
-          height = 15 # default: 15
-          #
-          # # padding between the tab bar and its focused node
-          padding = 7 # default: 5
-          #
-          # # the tab bar should animate in/out from the top instead of below the window
-          from_top = true # default: false
-          #
-          # # rounding of tab bar corners
-          rounding = 5 # default: 3
-          #
-          # # render the window title on the bar
-          render_text = false # default: true
-          #
-          # # center the window title
-          # text_center = <bool> # default: false
-          #
-          # # font to render the window title with
-          # text_font = <string> # default: Sans
-          #
-          # # height of the window title
-          # text_height = <int> # default: 8
-          #
-          # # left padding of the window title
-          # text_padding = <int> # default: 3
-          #
-          # # active tab bar segment color
-          col.active = 0xffd3869b # default: 0xff32b4ff
-          #
-          # # urgent tab bar segment color
-          # col.urgent = <color> # default: 0xffff4f4f
-          #
-          # # inactive tab bar segment color
-          col.inactive = 0xff3c3836 # default: 0x80808080
-          #
-          # # active tab bar text color
-          # col.text.active = <color> # default: 0xff000000
-          #
-          # # urgent tab bar text color
-          # col.text.urgent = <color> # default: 0xff000000
-          #
-          # # inactive tab bar text color
-          # col.text.inactive = <color> # default: 0xff000000
-        }
-    }
-
-    hyprfocus {
-        enabled = yes
-
-        keyboard_focus_animation = shrink
-        mouse_focus_animation = flash
-
-        bezier = bezIn, 0.5,0.0,1.0,0.5
-        bezier = bezOut, 0.0,0.5,0.5,1.0
-
-        flash {
-            flash_opacity = 0.7
-
-            in_bezier = bezIn
-            in_speed = 0.5
-
-            out_bezier = bezOut
-            out_speed = 3
-        }
-
-        shrink {
-            shrink_percentage = 0.8
-
-            in_bezier = bezIn
-            in_speed = 0.5
-
-            out_bezier = bezOut
-            out_speed = 3
-        }
-    }
-    
-}
-
-# Wallpapers
-#
-
-bind = $mainMod SHIFT, TAB, hyprexpo:expo, toggle
-
-
-# exec=swayidle -w timeout 1500 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
-
-
-windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
-windowrulev2 = noanim, class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
-windowrulev2 = noblur, class:^(xwaylandvideobridge)$
-
-# windowrulev2 = noblur ,class:^(kitty)
-
-windowrulev2= opacity override 0.9 override 0.9 override, class:^(firefox)
-windowrulev2= opacity 0.8r,class:^(dunst)
-# windowrulev2= opacity 0.85r,initialTitle:^(nemo)
-
-windowrulev2=opacity 0.85r,class:^(nemo)$
-windowrulev2=opacity 1.0,class:^(Nemo-menu)$
-
-windowrulev2= opacity 0.85r,class:^(vesktop)
-windowrulev2= opacity 0.85r,class:^(obsidian)
-windowrulev2= float,opacity 0.85r,class:^(waypaper)
-windowrulev2= float,title:^(snjwidget)
-
-windowrulev2 = float, class:^(spotify)
-windowrulev2 = size 1800 1000, class:^(spotify)
-windowrulev2 = center, class:^(spotify)
-
-windowrulev2 = float,class:(Xdg-desktop-portal-gtk),title:(Open File)
-windowrulev2 = float,class:(Xdg-desktop-portal-gtk),title:(Save As)
-
-windowrulev2 = float,class:(org.pulseaudio.pavucontrol)
-windowrulev2 = size 60% 70%,class:(org.pulseaudio.pavucontrol)
-windowrulev2 = move 39% 28%,class:(org.pulseaudio.pavucontrol)
-
-windowrulev2 = dimaround, class:(org.pulseaudio.pavucontrol)
-
-windowrulev2 = bordercolor rgb(d79921) rgb(d79921),floating:1
-windowrulev2 = bordersize 1, floating:1
-
-# layerrule = blur,waybar
-# layerrule = blur,wofi 
-
-####################
-### KEYBINDINGSS ###
-####################
-source = /home/snj/.config/hypr/bind.conf
+source = ./bind.conf
+source = ./workspaces.conf
+source = ./decoration.conf
+source = ./windowrules.conf
+source = ./plugins.conf
