--- a/bind.conf
+++ b/bind.conf
@@ -73,7 +73,7 @@ bindm = $mainMod, mouse:275, exec xdotool click 2
 bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioStop, exec, playerctl stop
 
-bind = $mainMod, P, exec, lua ~/Scripts/start_waybar.lua
+bind = $mainMod, P, exec, ~/Scripts/start_waybar.sh
 bind = $mainMod, U, exec, ~/Scripts/start_pavu.sh
 
 bind = , F1+h, exec, sendevent keyboard KEY_LEFT
