--- a/workspaces.conf
+++ b/workspaces.conf
@@ -38,19 +38,20 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-workspace = special:ds,    on-created-empty:vesktop, move-to:ds
+workspace = special:ds,    on-created-empty:vesktop --proxy-server="127.0.0.1:2080", move-to:ds
+# workspace = special:ds,    on-created-empty:webcord --proxy-server="127.0.0.1:2080"
 bind = $mainMod, S, togglespecialworkspace, ds 
 bind = $mainMod SHIFT, S, movetoworkspace, special:ds
 
-workspace = special:spot,  on-created-empty:spotify-launcher
-bind = $mainMod, X, togglespecialworkspace, spot
-bind = $mainMod SHIFT, X, movetoworkspace, special:spot
+workspace = special:mail,  on-created-empty:thunderbird
+bind = $mainMod, X, togglespecialworkspace, mail 
+bind = $mainMod SHIFT, X, movetoworkspace, special:mail
 
 workspace = special:obs,   on-created-empty:obsidian
 bind = $mainMod, Z, togglespecialworkspace, obs
 bind = $mainMod SHIFT, Z, movetoworkspace, special:obs
 
-workspace = special:vpn,   on-created-empty:nekoray
+workspace = special:vpn,   on-created-empty:~/Scripts/launch.sh nekoray.desktop
 bind = $mainMod, V, togglespecialworkspace, vpn
 bind = $mainMod SHIFT, V, movetoworkspace, special:vpn
 
