--- a/decoration.conf
+++ b/decoration.conf
@@ -76,6 +76,6 @@ animations {
     # animation = borderangle, 1, 8, default
     # animation = fade, 1, 3, default
     # animation = fadeOut, 1, 10, myBezier
-    # animation = workspaces, 1, 4.5, default
+    animation = workspaces, 1, 4.5, default
     # , slidefade 100%
 }
