Added fuzzel & dunst blur

--- a/bind.conf
+++ b/bind.conf
@@ -58,8 +58,8 @@ bind = Alt_L, 0, changegroupactive, 10
 bind = Control_L, Tab, pass, class:^(firefox)$
 bind = Control_L&Shift_L, Tab, pass, class:^(firefox)$
 
-bind = , PRINT, exec, hyprshot -m region -o ~/Data/Media/Screenshots
-bind = Shift_L, PRINT, exec, hyprshot -m window -o ~/Data/Media/Screenshots
+bind = $mainMod, R, exec, hyprshot -m region -o ~/Data/Media/Screenshots
+# bind = Shift_L, PRINT, exec, hyprshot -m window -o ~/Data/Media/Screenshots
 
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
