--- a/decoration.conf
+++ b/decoration.conf
@@ -46,11 +46,10 @@ decoration {
         passes = 3
         ignore_opacity = true
         vibrancy = 0.1696
-        xray = true
+        # xray = true
         # noise = 0.01
         # contrast = 0.9
         # vibrancy_darkness = 0.3
-
     }
 }
 
