--- a/workspaces.conf
+++ b/workspaces.conf
@@ -51,7 +51,7 @@ workspace = special:obs,   on-created-empty:obsidian
 bind = $mainMod, Z, togglespecialworkspace, obs
 bind = $mainMod SHIFT, Z, movetoworkspace, special:obs
 
-workspace = special:vpn,   on-created-empty:~/Scripts/launch.sh nekoray.desktop
+workspace = special:vpn,   on-created-empty:~/Scripts/launch.sh nekoray.desktop && kitty -e v2ray run -c /home/snj/Code/Lang/lua/proxy/other/t2.json
 bind = $mainMod, V, togglespecialworkspace, vpn
 bind = $mainMod SHIFT, V, movetoworkspace, special:vpn
 
