--- a/windowrules.conf
+++ b/windowrules.conf
@@ -34,3 +34,8 @@ windowrulev2 = dimaround, class:(org.pulseaudio.pavucontrol)
 windowrulev2 = bordercolor rgb(d79921) rgb(d79921),floating:1
 windowrulev2 = bordersize 1, floating:1
 
+layerrule = blur, notifications
+layerrule = ignorezero, notifications
+
+layerrule = blur,launcher # fuzzel
+layerrule = ignorezero,launcher 
