--- a/windowrules.conf
+++ b/windowrules.conf
@@ -32,10 +32,16 @@ windowrulev2 = move 39% 28%,class:(org.pulseaudio.pavucontrol)
 windowrulev2 = dimaround, class:(org.pulseaudio.pavucontrol)
 
 windowrulev2 = bordercolor rgb(d79921) rgb(d79921),floating:1
-windowrulev2 = bordersize 1, floating:1
+# windowrulev2 = bordersize 1, floating:1
 
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
 
 layerrule = blur,launcher # fuzzel
 layerrule = ignorezero,launcher 
+
+layerrule = blur,waybar
+layerrule = ignorezero,waybar 
+
+windowrulev2= opacity 0.9r,class:^(org.telegram.desktop)
+
