--- a/workspaces.conf
+++ b/workspaces.conf
@@ -1,20 +1,25 @@
-$mon1 = DP-1
-$mon2 = DP-2
+$mon1 = DP-2
+$mon2 = DP-1
+$mon3 = HDMI-A-1
 
-monitor=$mon2,2560x1440@180,0x0,1
-monitor=$mon1,1920x1080@144,2560x0,1
+monitor=$mon1,2560x1440@180,0x0,1
+monitor=$mon2,1920x1080@144,2560x0,1
+monitor=$mon3,1920x1080@60,4480x0,1
 
-workspace = 1, monitor:$mon1, default:true, on-created-empty:firefox
-workspace = 2, monitor:$mon2, default:true
-workspace = 3, monitor:$mon2, default:true
-workspace = 4, monitor:$mon2, default:true
-workspace = 5, monitor:$mon1, default:true, on-created-empty:Telegram
 
-workspace = 6, monitor:$mon2, default:true
-workspace = 7, monitor:$mon2, default:true
+# workspace = 0, monitor:$mon3, default:true, on-created-empty:firefox
+
+workspace = 1, monitor:$mon2, default:true, on-created-empty:firefox
+workspace = 2, monitor:$mon1, default:true
+workspace = 3, monitor:$mon1, default:true
+workspace = 4, monitor:$mon1, default:true
+workspace = 5, monitor:$mon2, default:true, on-created-empty:Telegram
+
+workspace = 6, monitor:$mon1, default:true
+workspace = 7, monitor:$mon1, default:true
 workspace = 8, monitor:$mon1, default:true
-workspace = 9, monitor:$mon1, default:true
-workspace = 10, monitor:$mon2, default:true
+workspace = 9, monitor:$mon3, default:true
+# workspace = 10, monitor:$mon2, default:true
 
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -38,8 +43,8 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-workspace = special:ds,    on-created-empty:vesktop --proxy-server="127.0.0.1:2080", move-to:ds
-# workspace = special:ds,    on-created-empty:webcord --proxy-server="127.0.0.1:2080"
+# workspace = special:ds,    on-created-empty:vesktop --proxy-server="socks5://127.0.0.1:3080", move-to:ds
+workspace = special:ds,    on-created-empty:webcord --proxy-server="socks5://127.0.0.1:3080"
 bind = $mainMod, S, togglespecialworkspace, ds 
 bind = $mainMod SHIFT, S, movetoworkspace, special:ds
 
