--- a/decoration.conf
+++ b/decoration.conf
@@ -2,7 +2,7 @@
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 3,3,3,3 
-    gaps_out =9,9,5,9 
+    gaps_out =9,9,9,9 
     # gaps_out = 20
 
     border_size = 0
@@ -42,13 +42,15 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 7
+        new_optimizations = true
+        size = 4
         passes = 3
         ignore_opacity = true
-        vibrancy = 0.1696
+        vibrancy = 0.5
         # xray = true
-        # noise = 0.01
-        # contrast = 0.9
+        noise = 0.015
+        # contrast = 0.45
+
         # vibrancy_darkness = 0.3
     }
 }
